--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 @use '../../styles/scss/mixin' as *;
+@use '../../styles/scss/media' as *;
 
 .footer {
   margin-top: 5rem;
@@ -16,18 +17,48 @@
       width: 100%;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
+      margin-right: 10px;
+
+      @include tablet {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @include mobile {
+        column-gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+
+        .footerSocialUsefulLinks {
+          display: none;
+        }
+      }
 
       .footerSocialAboutTitles {
         color: white;
         font-size: 1rem;
         font-weight: 700;
+
+        @include break(720px) {
+          font-size: .925rem;
+        }
       }
 
       ul li {
         margin: 8px 0px;
 
+        @include break(720px) {
+          margin: 4px 0px;
+        }
+
+        @include mobile {
+          margin: 1px 0;
+        }
+
         a {
           color: #a7a7a7;
+
+          @include break(720px) {
+            font-size: .875rem;
+          }
         }
       }
     }
@@ -35,6 +66,11 @@
     .footerSocialIcons {
       display: flex;
       column-gap: 16px;
+
+      @include mobile {
+        column-gap: 8px;
+      }
+
       a {
         height: 40px;
         width: 40px;
@@ -46,6 +82,11 @@
         align-items: center;
         background-color: rgb(41, 41, 41);
         font-size: 1.2rem;
+
+        @include mobile {
+          width: 25px;
+          height: 25px;
+        }
       }
     }
   }
@@ -54,21 +95,42 @@
     display: flex;
     justify-content: space-between;
     margin-top: 2rem;
+    align-items: center;
 
     .footerPrivacyLeftSide {
       display: flex;
       column-gap: 15px;
+      align-items: center;
 
-    }
+      div {
+        display: flex;
 
-    a{
-      color: #a7a7a7;
-      font-size: .875rem;
+        a {
+          color: #a7a7a7;
+          font-size: .875rem;
+
+          @include tablet {
+            font-size: .675rem;
+          }
+        }
+      }
+
+      @include mobile {
+        column-gap: 5px;
+
+        :nth-child(5),
+        :nth-child(6) {
+          display: none;
+        }
+      }
     }
 
     p {
       font-size: .875rem;
       color: #a7a7a7;
+      @include tablet {
+        font-size: .675rem;
+      }
     }
   }
 }
